# libAPG

./: .clang-format  .clocignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Doxyfile  README.md  README_kk.md  README_ru.md  ROADMAP.md  SECURITY.md  cross-aarch64.txt  cross-mips64.txt  cross-riscv64.txt  cross-x86_64.txt  flake.nix  libapg.pc  meson.build  meson_options.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  release.yml
arch/aarch64/: crc32.S  md5.S  sha256.S
arch/mips64/: crc32.S  md5.S  sha256.S
arch/riscv64/: crc32.S  md5.S  sha256.S
arch/x86_64/: crc32.S  md5.S  sha256.S
docs/: conf.py  index.rst
docs/api/: archive.rst  checksum.rst  config.rst  crypto.rst  db.rst  graph.rst  index.rst  install.rst  journal.rst  json.rst  package.rst  sign.rst  transaction.rst  version.rst
include/: util.h
include/apg/: archive.h  audit.h  checksum.h  config.h  copy.h  crc32.h  db.h  graph.h  install.h  journal.h  json.h  keyring.h  md5.h  package.h  repo.h  scripts.h  sha256.h  sign.h  transaction.h  version.h
pkg/: metadata.json
scripts/: bump-version.py  check-doc.py  check-spdx.py  checkpatch.py
src/: archive.c  crc32.c  db.c  db.rs  json.c  lib.rs  package.c  sign.c  util.c
src/checksum/: checksum.c  crc32.c  md5.c  sha256.c
src/db/: audit.c  db.c  db_priv.h  dependents.c  journal.c  orphans.c  owner.c  read.c  search.c  stats.c  verify.c  write.c
src/graph/: conflict.c  graph.c  graph_priv.h  resolve.c
src/install/: copy.c  install.c  rollback.c  scripts.c
src/repo/: repo_fetch.c
src/sign/pgp/: keyring.c  pgp.c
src/sign/sodium/: keyring.c  sodium.c
src/transaction/: commit.c  prepare.c  trans_priv.h  transaction.c
src/version/: version.c
subprojects/: iron.wrap
test/: Makefile  meson.build
test/src/: helpers.h  main.c  test_conflict.c  test_cycle.c  test_policy.c  test_resolve.c  tests.h
